--- a/valheim_plus.cfg
+++ b/valheim_plus.cfg
@@ -7,7 +7,7 @@ enabled=true
 mainMenuLogo=true
 
 ; Display the advertisement of our server hosting partner on the server browser menu
-serverBrowserAdvertisement=true
+serverBrowserAdvertisement=false
 
 [AdvancedBuildingMode]
 
@@ -88,14 +88,14 @@ honeyProductionSpeed=1200
 maximumHoneyPerBeehive=4
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The range of the chest detection for the auto deposit feature. 
 ; Maximum is 50
 autoDepositRange=10
 
 ; Display the minutes and seconds until the beehive produces honey on crosshair hover.
-showDuration=false
+showDuration=true
 
 [Building]
 
@@ -221,10 +221,10 @@ fermenterDuration=2400
 fermenterItemsProduced=6
 
 ; Display the minutes and seconds until the fermenter is done on crosshair hover.
-showDuration=false
+showDuration=true
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; Automatically pull meads from nearby chests to be placed inside the Fermenter as soon as its empty.
 autoFuel=false
@@ -240,14 +240,14 @@ autoRange=10
 [FireSource]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#FireSource
-enabled=false
+enabled=true
 
 ; If set to true, torch-type fire sources will stay at max fuel level once filled. 
 ; Applies to: wood torches, iron torches, green torches, sconces and brazier.
-torches=false
+torches=true
 
 ; If set to true, non torch-type fire sources will stay at max fuel level once filled.
-fires=false
+fires=true
 
 ; Automatically pull wood from nearby chests to be placed inside the Fire as soon as its empty.
 autoFuel=false
@@ -306,7 +306,7 @@ autoRange=10
 [Furnace]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Furnace
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a Furnace.
 maximumOre=10
@@ -321,10 +321,10 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Furnace will pull coal and raw materials from nearby chests to be automatically added to it when its empty.
-autoFuel=false
+autoFuel=true
 
 ; This option prevents the Furnace to pull items from warded areas if it isn't placed inside of it.
 ; For convenience, we recommend this to be set to true.
@@ -388,10 +388,10 @@ rollBackwards=F10
 [Items]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Items
-enabled=false
+enabled=true
 
 ; Enables you to teleport with ores and other usually teleport restricted objects.
-noTeleportPrevention=false
+noTeleportPrevention=true
 
 ; Increase or reduce item weight by a modifier in percent. 
 ; The value -50 will reduce item weight of every object by 50%, 50 will increase the weight of every item by 50%.
@@ -512,20 +512,20 @@ enabled=false
 maximumWood=25
 
 ; Change false to true to disable Fine Wood processing.
-dontProcessFineWood=false
+dontProcessFineWood=true
 
 ; Change false to true to disabled Round Log processing.
-dontProcessRoundLog=false
+dontProcessRoundLog=true
 
 ; The time it takes for the Kiln to produce a single piece of coal in seconds.
 productionSpeed=15
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Kiln will pull wood from nearby chests to be automatically added to it when its empty.
 ; This option respects the dontProcessFineWood and dontProcessRoundLog settings.
-autoFuel=false
+autoFuel=true
 
 ; Stops autoFuel (looking for fuel) when there is at leasts this quantity of Coal in nearby chests 
 ; (ignored if set to 0)
@@ -902,7 +902,7 @@ lowerFOVHotkey=PageDown
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#GridAlignment
 ; This offers a global fixed grid system to make precise placements.
-enabled=false
+enabled=true
 
 ; Key to enable grid alignment.
 align=LeftAlt
@@ -917,7 +917,7 @@ changeDefaultAlignment=F6
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#CraftFromChest
 ; This feature allows you to craft from nearby chests when in range.
-enabled=false
+enabled=true
 
 ; Change false to true to disable this feature when using a Cooking Station.
 disableCookingStation=false
@@ -956,7 +956,7 @@ productionSpeed=10
 ignoreWindIntensity=false
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Windmill will pull barley from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -1050,7 +1050,7 @@ stunInformation=false
 [GameClock]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#GameClock
-enabled=false
+enabled=true
 
 ; Change time formatting from 24hr to AM-PM.
 useAMPM=false
