--- a/valheim_plus.cfg
+++ b/valheim_plus.cfg
@@ -7,7 +7,7 @@ enabled=true
 mainMenuLogo=true
 
 ; Display the advertisement of our server hosting partner on the server browser menu
-serverBrowserAdvertisement=true
+serverBrowserAdvertisement=false
 
 [AdvancedBuildingMode]
 
@@ -79,7 +79,7 @@ unclaimedBedsOnly=false
 [Beehive]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Beehive
-enabled=false
+enabled=true
 
 ; Configure the speed at which the bees produce honey in seconds, 1200 seconds are 24 ingame hours.
 honeyProductionSpeed=1200
@@ -88,14 +88,14 @@ honeyProductionSpeed=1200
 maximumHoneyPerBeehive=4
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The range of the chest detection for the auto deposit feature. 
 ; Maximum is 50
 autoDepositRange=10
 
 ; Display the minutes and seconds until the beehive produces honey on crosshair hover.
-showDuration=false
+showDuration=true
 
 [Building]
 
@@ -212,7 +212,7 @@ ride=0
 [Fermenter]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Fermenter
-enabled=false
+enabled=true
 
 ; Configure the time that the fermenter takes to produce its product, 2400 seconds are 48 ingame hours.
 fermenterDuration=2400
@@ -221,10 +221,10 @@ fermenterDuration=2400
 fermenterItemsProduced=6
 
 ; Display the minutes and seconds until the fermenter is done on crosshair hover.
-showDuration=false
+showDuration=true
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; Automatically pull meads from nearby chests to be placed inside the Fermenter as soon as its empty.
 autoFuel=false
@@ -240,14 +240,14 @@ autoRange=10
 [FireSource]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#FireSource
-enabled=false
+enabled=true
 
 ; If set to true, torch-type fire sources will stay at max fuel level once filled. 
 ; Applies to: wood torches, iron torches, green torches, sconces and brazier.
-torches=false
+torches=true
 
 ; If set to true, non torch-type fire sources will stay at max fuel level once filled.
-fires=false
+fires=true
 
 ; Automatically pull wood from nearby chests to be placed inside the Fire as soon as its empty.
 autoFuel=false
@@ -275,7 +275,7 @@ disableFoodDegradation=false
 [Smelter]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Smelter
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a Smelter.
 maximumOre=10
@@ -290,10 +290,10 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Smelter will pull coal and raw materials from nearby chests to be automatically added to it when its empty.
-autoFuel=false
+autoFuel=true
 
 ; This option prevents the Smelter to pull items from warded areas if it isn't placed inside of it.
 ; For convenience, we recommend this to be set to true.
@@ -306,7 +306,7 @@ autoRange=10
 [Furnace]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Furnace
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a Furnace.
 maximumOre=10
@@ -321,10 +321,10 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Furnace will pull coal and raw materials from nearby chests to be automatically added to it when its empty.
-autoFuel=false
+autoFuel=true
 
 ; This option prevents the Furnace to pull items from warded areas if it isn't placed inside of it.
 ; For convenience, we recommend this to be set to true.
@@ -388,10 +388,10 @@ rollBackwards=F10
 [Items]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Items
-enabled=false
+enabled=true
 
 ; Enables you to teleport with ores and other usually teleport restricted objects.
-noTeleportPrevention=false
+noTeleportPrevention=true
 
 ; Increase or reduce item weight by a modifier in percent. 
 ; The value -50 will reduce item weight of every object by 50%, 50 will increase the weight of every item by 50%.
@@ -406,7 +406,7 @@ itemStackMultiplier=0
 droppedItemOnGroundDurationInSeconds=3600
 
 ; Items dropped always float in water.
-itemsFloatInWater=false
+itemsFloatInWater=true
 
 [Hud]
 
@@ -506,26 +506,26 @@ capes=0
 [Kiln]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Kiln
-enabled=false
+enabled=true
 
 ; Maximum amount of wood in a Kiln.
 maximumWood=25
 
 ; Change false to true to disable Fine Wood processing.
-dontProcessFineWood=false
+dontProcessFineWood=true
 
 ; Change false to true to disabled Round Log processing.
-dontProcessRoundLog=false
+dontProcessRoundLog=true
 
 ; The time it takes for the Kiln to produce a single piece of coal in seconds.
 productionSpeed=15
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Kiln will pull wood from nearby chests to be automatically added to it when its empty.
 ; This option respects the dontProcessFineWood and dontProcessRoundLog settings.
-autoFuel=false
+autoFuel=true
 
 ; Stops autoFuel (looking for fuel) when there is at leasts this quantity of Coal in nearby chests 
 ; (ignored if set to 0)
@@ -542,7 +542,7 @@ autoRange=10
 [Map]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Map
-enabled=false
+enabled=true
 
 ; With this enabled you will receive the same exploration progression as other players on the server. 
 ; This will also enable the option for the server to sync everyones exploration progression on connecting to the server.
@@ -558,12 +558,12 @@ preventPlayerFromTurningOffPublicPosition=false
 shareAllPins=false
 
 ; Display carts and boats on the map
-displayCartsAndBoats=false
+displayCartsAndBoats=true
 
 [Player]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Player
-enabled=false
+enabled=true
 
 ; The base amount of carry weight of your character.
 baseMaximumWeight=300
@@ -581,7 +581,7 @@ disableCameraShake=false
 baseUnarmedDamage=70
 
 ; When changed to true, you will not be permitted to place a crop within the grow radius of another crop.
-cropNotifier=false
+cropNotifier=true
 
 ; How many seconds each comfort level contributes to the rested bonus.
 restSecondsPerComfortLevel=60
@@ -591,7 +591,7 @@ restSecondsPerComfortLevel=60
 deathPenaltyMultiplier=0
 
 ; If set to true, this option will automatically repair your equipment when you interact with the appropriate workbench.
-autoRepair=false
+autoRepair=true
 
 ; Boss buff duration (seconds)
 guardianBuffDuration=300
@@ -619,7 +619,7 @@ skipIntro=false
 iHaveArrivedOnSpawn=true
 
 ; If set to true, you will not put away / unequip your items when swimming.
-dontUnequipItemsWhenSwimming=false
+dontUnequipItemsWhenSwimming=true
 
 ; If set to true, items will be re-equipped when you exit water after swimming (if they were hidden automatically)
 reequipItemsAfterSwimming=false
@@ -757,7 +757,7 @@ wardEnemySpawnRange=0
 
 [Workbench]
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Workbench
-enabled=false
+enabled=true
 
 ; Set the workbench radius in meters.
 workbenchRange=20
@@ -770,7 +770,7 @@ workbenchEnemySpawnRange=0
 workbenchAttachmentRange=5
 
 ; Disables the roof and exposure requirement to use a workbench.
-disableRoofCheck=false
+disableRoofCheck=true
 
 [Wagon]
 
@@ -902,7 +902,7 @@ lowerFOVHotkey=PageDown
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#GridAlignment
 ; This offers a global fixed grid system to make precise placements.
-enabled=false
+enabled=true
 
 ; Key to enable grid alignment.
 align=LeftAlt
@@ -917,7 +917,7 @@ changeDefaultAlignment=F6
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#CraftFromChest
 ; This feature allows you to craft from nearby chests when in range.
-enabled=false
+enabled=true
 
 ; Change false to true to disable this feature when using a Cooking Station.
 disableCookingStation=false
@@ -944,7 +944,7 @@ allowCraftingFromShips=false
 [Windmill]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#Windmill
-enabled=false
+enabled=true
 
 ; Maximum amount of barley in a windmill.
 maximumBarley=50
@@ -956,7 +956,7 @@ productionSpeed=10
 ignoreWindIntensity=false
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Windmill will pull barley from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -972,7 +972,7 @@ autoRange=10
 [SpinningWheel]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#SpinningWheel
-enabled=false
+enabled=true
 
 ; Maximum amount of flax in a spinning wheel.
 maximumFlax=50
@@ -981,7 +981,7 @@ maximumFlax=50
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside the nearest nearby chests.
-autoDeposit=false
+autoDeposit=true
 
 ; The Spinning Wheel will pull flax from nearby chests to be automatically added to it when its empty.
 autoFuel=false
@@ -1050,7 +1050,7 @@ stunInformation=false
 [GameClock]
 
 ; Change false to true to enable this section. https://valheim.plus/documentation/list#GameClock
-enabled=false
+enabled=true
 
 ; Change time formatting from 24hr to AM-PM.
 useAMPM=false
